<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/editText_Write"
        android:inputType="text"
        android:id="@+id/editText_Write"
        android:layout_gravity="center_horizontal" />

    <Button
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_SendText"
        android:id="@+id/button_SendText"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textView_Show"
        android:id="@+id/textView_Show"
        android:layout_gravity="center_horizontal" />

    <Button
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_GetText"
        android:id="@+id/button_GetText"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
